// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders WithElement without crashing 1`] = `
<body>
  <div>
    <div
      aria-describedby=":r1:"
      class="rcx-box rcx-box--full"
      tabindex="0"
    >
      Text
    </div>
  </div>
</body>
`;

exports[`renders WithRenderProp without crashing 1`] = `
<body>
  <div>
    <div
      aria-describedby=":r0:"
      class="rcx-box rcx-box--full"
      tabindex="0"
    >
      Text
    </div>
  </div>
</body>
`;
